tests/ui/error-codes/E0453.stderr
error[E0453]: allow(non_snake_case) incompatible with previous forbid
  --> $DIR/E0453.rs:3:9
   |
LL | #![forbid(non_snake_case)]
   |           -------------- `forbid` level set here
LL |
LL | #[allow(non_snake_case)]
   |         ^^^^^^^^^^^^^^ overruled by previous forbid

error[E0453]: allow(non_snake_case) incompatible with previous forbid
  --> $DIR/E0453.rs:3:9
   |
LL | #![forbid(non_snake_case)]
   |           -------------- `forbid` level set here
LL |
LL | #[allow(non_snake_case)]
   |         ^^^^^^^^^^^^^^ overruled by previous forbid
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0453`.
